# pyfetch

./: README.md  pyproject.toml
pyfetch/: __init__.py  __main__.py  cpuinfo.py  pyfetch.py
