[tool.poetry]
name = "pyfetch"
version = "1.0.0"
description = "A *fetch program written in Python"
authors = ["Nebula <me@itsnebula.net>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/itsnebulalol/pyfetch"
keywords = ["prompt"]
classifiers = [
    "Natural Language :: English",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.9.4"

[tool.poetry.scripts]
fetch = 'pyfetch.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
